--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,24 @@
+@font-face {
+  font-family: "Barriecito";
+  src: url(/public/fonts/Barriecito-Regular.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 html {
-  font-family: Helvetica, sans-serif;
+  font-family: "Barriecito", Helvetica, sans-serif;
 }
 body {
   max-width: 1440px;
   margin: 0 auto;
+  background-color: rgb(34, 4, 68);
 }
 
 img {
-  max-width: 100%;
+  max-height: 100%;
 }
 a {
   color: black;
