--- a/src/components/result/Result.css
+++ b/src/components/result/Result.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
 
   gap: 1rem;
-  width: 30rem;
+  width: 40rem;
 }
 .score-board div {
   padding: 0.5rem;
@@ -26,7 +26,8 @@
 .score-box {
   color: #fff;
   border-radius: 5px;
-  margin: 0.2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   width: 5rem;
   box-shadow: 4px 4px rgb(187, 255, 0);
   background-color: rgb(34, 34, 34);
